--- a/Website Design/style.scss
+++ b/Website Design/style.scss
@@ -24,7 +24,7 @@ body{
     border-radius:8px;
     z-index:2;
     height:90%;
-    position:fixed;
+    position:relative;
     width:90%;
     right:50%;
     margin-right:-45%;
@@ -32,4 +32,8 @@ body{
     margin-bottom:2rem;
     z-index: 2;
     
+}
+
+.navbar{
+    z-index:3;
 }
