--- a/Website Design/style.css
+++ b/Website Design/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
 body {
     position: relative;
 }
@@ -24,13 +23,15 @@ a:hover {
     padding-top: 5px;
 }
 
-p,h4{
+p,
+h4 {
     font-family: 'Montserrat', sans-serif;
 }
 
-h3{
+h3 {
     font-family: "Bebas Neue", cursive;
 }
+
 
 /* nav heading left */
 
@@ -70,7 +71,7 @@ h3{
 
 #section {
     padding-top: 100px;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
     background-image: url('background2.gif');
     background-position: center;
@@ -104,73 +105,92 @@ h3{
     height: 100px;
 }
 
+@media only screen and (max-width: 768px) {
+    .flex-container1 .searchButton {
+        width: 250px;
+    }
+}
+
 #myIcon {
-    border-radius: 5px;
+    border-radius: 20px;
     background-color: #fff;
     color: black;
-    font-size: 18px;
+    height: 40px;
     text-align: center;
 }
 
 #myIcon:hover {
     cursor: pointer;
-    border: black;
+    /* border: black; */
+}
+
+.input {
+    border-radius: 20px;
+    height: 40px;
 }
 
 .input:focus {
     outline: none !important;
-    border:2px solid #FD98A7;
+    border: 2px solid #FD98A7;
     box-shadow: 0 0 10px white;
 }
+
 
 /* ABOUT US SECTION */
 
 #section1 {
     padding-top: 50px;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
+    padding: 10px;
     background-color: white;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 10px;
 }
 
-.gradientFont{
-   background: -webkit-linear-gradient(left,#fd98a7, #333);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+#section1 div {
+    color: black;
 }
 
-.flex-container-about{
-    display:flex;
-    flex-flow: row nowrap;
-    justify-content:center;
-    align-items:center;
+.gradientFont {
+    background: -webkit-linear-gradient(left, #fd98a7, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.flex-image{
-    order:1;
-    flex-grow: 1;
-    margin:1rem;
-}
-.flex-content{
-    order:2;
-    flex-grow:5;
-    color:black;
-    margin:1rem;
-}
-
-mark{
-    color:#fd98a7;
+mark {
+    color: #fd98a7;
     opacity: 1;
 }
+
+.myROw {
+    padding: 0px;
+    margin: 0px;
+    padding-top: 10px;
+}
+
+.aboutImage {
+    width: 400px;
+    height: 250px;
+    padding: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+    .aboutImage {
+        width: 300px;
+    }
+}
+
+
 /* TEAM SECTION */
-  
+
 #section2 {
     padding-top: 50px;
     padding-bottom: 50px;
     min-height: 100vh;
-    color:black;
+    color: black;
     background-image: url('rm21-color-sasi-02_1.jpg');
     background-position: center;
     background-repeat: repeat;
@@ -190,7 +210,7 @@ mark{
     text-align: center;
     padding: 20px 5px 5px 20px;
     margin: 20px 5px 10px 5px;
-    width: 300px;
+    width: 250px;
     border: 1px solid lightgrey;
     border-radius: 15px;
     background-color: white;
@@ -217,8 +237,8 @@ mark{
 #section3 {
     padding-top: 50px;
     padding-bottom: 50px;
-    height: 100vh;
-    color:black;
+    min-height: 100vh;
+    color: black;
     background-color: white;
     /* background-image: url('white.jpg'); */
 }
@@ -226,7 +246,7 @@ mark{
 #section4 {
     padding-top: 50px;
     padding-bottom: 50px;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
     background-image: url('rm21-color-sasi-02_1.jpg');
     background-position: center;
@@ -237,7 +257,7 @@ mark{
 #section5 {
     padding-top: 50px;
     padding-bottom: 50px;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
     background-color: white;
     /* background-image: url('white.jpg'); */
@@ -260,36 +280,36 @@ mark{
 }
 
 
-
-
 /*OUR TEAM CARDS STYLE*/
-.flex-container-team{
-    display:flex;
+
+.flex-container-team {
+    display: flex;
     flex-flow: row nowrap;
-    justify-content:center;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
 }
-  .our-team {
+
+.our-team {
     padding: 30px 0 40px;
     margin-bottom: 30px;
     background-color: #f7f5ec;
     text-align: center;
     overflow: hidden;
     position: relative;
-    width:200px;
-    height:350px;
-  }
-  
-  .our-team .picture {
+    /* width: 200px; */
+    height: 350px;
+}
+
+.our-team .picture {
     display: inline-block;
     height: 130px;
     width: 130px;
     margin-bottom: 50px;
     z-index: 1;
     position: relative;
-  }
-  
-  .our-team .picture::before {
+}
+
+.our-team .picture::before {
     content: "";
     width: 100%;
     height: 0;
@@ -302,13 +322,13 @@ mark{
     opacity: 0.9;
     transform: scale(3);
     transition: all 0.3s linear 0s;
-  }
-  
-  .our-team:hover .picture::before {
+}
+
+.our-team:hover .picture::before {
     height: 100%;
-  }
-  
-  .our-team .picture::after {
+}
+
+.our-team .picture::after {
     content: "";
     width: 100%;
     height: 100%;
@@ -318,65 +338,65 @@ mark{
     top: 0;
     left: 0;
     z-index: -1;
-  }
-  
-  .our-team .picture img {
+}
+
+.our-team .picture img {
     /*width: 100%;
     height: auto;*/
-    width:150px;
-    height:150px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     transform: scale(1);
     transition: all 0.9s ease 0s;
-  }
-  
-  .our-team:hover .picture img {
+}
+
+.our-team:hover .picture img {
     box-shadow: 0 0 0 14px #f7f5ec;
     transform: scale(0.7);
-  }
-  
-  .our-team .title {
+}
+
+.our-team .title {
     display: block;
     font-size: 15px;
     color: #4e5052;
     text-transform: capitalize;
-  }
-  
-  .our-team .social {
+}
+
+.our-team .social {
     width: 100%;
     padding: 0;
     margin: 0;
-    background-color:#fd98a7;
+    background-color: #fd98a7;
     position: absolute;
     bottom: -100px;
     left: 0;
     transition: all 0.5s ease 0s;
-  }
-  
-  .our-team:hover .social {
+}
+
+.our-team:hover .social {
     bottom: 0;
-  }
-  
-  .our-team .social li {
+}
+
+.our-team .social li {
     display: inline-block;
-  }
-  
-  .our-team .social li a {
+}
+
+.our-team .social li a {
     display: block;
     padding: 10px;
     font-size: 17px;
     color: white;
     transition: all 0.3s ease 0s;
     text-decoration: none;
-  }
-  
-  .our-team .social li a:hover {
+}
+
+.our-team .social li a:hover {
     color: #fd98a7;
     background-color: #f7f5ec;
-  }
-  
-.teamGif img{
-   margin:auto;
-   width:300px;
-   height:200px;
+}
+
+.teamGif img {
+    margin: auto;
+    width: 300px;
+    height: 200px;
 }
